dev/POCO/TEST/NEG/NDOLLA04.POC
/* Checks to see that '$' character doesn't bomb error handler */
#pragma poco echo "expect>expecting name in declaration got '$'"

$;

main()
{
int i;

puts("This shouldn't compile");
}
